More changes to index and readme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script><!--#include virtual="../../js/templateData.js" --></script>
 
 <script id="content-template" type="text/x-handlebars-template">
-  <h1>Developer Guide for Kafka Streams</h1>
+  <h1>Developer Guide for Kafka Streams Home</h1>
     <div class="sub-nav-sticky">
         <div class="sticky-top">
             <div style="height:35px">
